client/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
:root {
  --colour-1: #ffffff;
  --colour-2: #2f2f2e;
  --colour-3: #2f2f2e;
  --colour-4: #2f2f2e;
  --colour-5: #2f2f2e;
  --colour-6: #2f2f2e;

  --light-gray: #f7f7f7;
  --light-gray-hover: #f1f1f1;
  --gray: #d5d5d5;
  --yellow: #fce96b;

  --accent: #ffffff;
  --blur-bg: #ffffff;
  --blur-border: rgba(0, 0, 0, 0.251);
  --blur-input: #000000;
  --conversations: #000000;

  --section-gap: 25px;
  --body-gap: 25px;
  --border-radius-1: 8px;

  --menu-percentage: 80%;
  --font-1: "Inter";
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  position: relative;
  font-family: var(--font-1);
}

html,
body {
  scroll-behavior: smooth;
  overflow: hidden;
  height: 100vh;
  margin: 0;
  padding: 0;
}

body {
  padding: 0 8px 0 8px;
  background: var(--colour-1);
  color: var(--colour-3);
  height: 100vh;
  overflow: hidden;
}

h1 {
  font-family: "Inter";
  font-weight: 700;
  font-size: 32px;
}

h2 {
  font-family: "Inter";
  font-weight: 600;
  font-size: 26px;
}

h3 {
  font-family: "Inter";
  font-weight: 500;
  font-size: 22px;
}

strong {
  font-family: "Inter";
  font-weight: 700;
}

em {
  font-family: "Inter";
  font-style: italic;
  font-weight: 300;
}

strong em,
em strong {
  font-family: "Inter";
  font-style: italic;
  font-weight: bold;
}

ul,
ol {
  font-family: "Inter";
  font-weight: 400;
  font-size: 18px;
}

blockquote {
  font-family: "Inter";
  font-style: italic;
  font-weight: 500;
  color: #6c757d;
  font-size: 18px;
  border-left: 4px solid #ccc;
  padding-left: 26px;
}

code {
  font-family: "Inter Mono", monospace;
  font-size: 16px;
  background: #f8f9fa;
  padding: 4px;
  border-radius: 4px;
}

pre code {
  font-family: "Inter Mono", monospace;
  font-size: 16px;
  background: #f8f9fa;
  padding: 8px;
  border-radius: 4px;
  display: block;
  white-space: pre-wrap;
}

p,
li {
  font-family: "Inter";
  font-size: 18px;
  font-weight: 400;
}

.modal-overlay {
  position: absolute;
  right: 5px;
  left: 5px;
  background: var(--light-gray);
  display: none;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

.video-modal {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #eeebeb;
  padding: 20px;
  border-radius: 8px;
  z-index: 99999;
  width: 90%;
  height: 70vh;
  overflow-y: auto;
  gap: 20px;
  align-items: center;
}

.nav-element {
  color: #2f2f2e;
  text-decoration: none;
  cursor: pointer;
}

.top-navigation {
  display: flex;
  align-items: flex-start;
  margin: 8px;
  justify-content: space-around;
  background-color: var(--light-gray);
  padding: 10px;
  width: 744px;
  margin-bottom: 10px;
  padding: 14px;
  gap: 32px;
  border-radius: 8px;
  z-index: 69;
}

.top-navigation a:hover {
  color: black;
}
.top-navigation a {
  padding: 8px;
}

.top-navigation-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

.top-navigation-a-container {
  height: 32px;
  display: flex;
  border-radius: 8px;
}

.top-navigation-a-container:hover {
  background-color: var(--light-gray-hover);
}

.nav-element:hover {
  color: var(--blur-border);
}

.row {
  display: flex;
  gap: var(--section-gap);
  height: 100vh;
  overflow: hidden;
}

.column {
  display: flex;
  flex: auto;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.box {
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  background-color: var(--blur-bg);
  height: 100%;
  width: 100%;
  border-radius: var(--border-radius-1);
  border: 1px solid var(--blur-border);
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.conversations {
  margin: 8px;
  max-width: 260px;
  min-width: 0;
  padding: var(--section-gap);

  background-color: var(--light-gray);
  border-radius: 8px;

  overflow-y: auto;
  height: calc(100vh - 16px);

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 16px;

  @media screen and (max-width: 990px) {
    display: none;
  }
}

ol li {
  margin-top: 8px;
  margin-bottom: 8px;
}

.conversations ul {
  margin: 24px 0;
  display: flex;
  flex-direction: column;
  gap: 14px;

  list-style-type: none;

  text-align: center;
}

.conversations ul li:hover {
  cursor: pointer;
  font-weight: bold;
}

.conversations h1,
h2,
h3 {
  margin: 8px 0px 8px 0px;
}

.content hr {
  margin: 8px 0 8px 0 !important;
}

.assistant-content {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.conversations a,
.conversations span,
.conversations i {
  color: #2f2f2e;
}

.logo {
  width: 120px;
  margin-top: auto;
  display: none; /* SUPPRESSION DU LOGO */
}

.conversation {
  width: 100%;
  height: 100vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
}

.conversation #messages {
  width: 100%;
  display: flex;
  flex-direction: column;
  overflow-wrap: break-word;
  overflow-y: auto;
  overflow-x: hidden;
  flex: 1;
  padding: 20px 0;
  scroll-behavior: smooth;
  align-items: center;
  height: calc(100vh - 120px);
  padding-bottom: 120px;
}

.conversation .user-input {
}

.conversation .user-input input {
  font-size: 15px;
  width: 100%;
  height: 100%;
  padding: 12px 15px;
  background: none;
  border: none;
  outline: none;
  color: var(--colour-3);
}

.conversation .user-input input::placeholder {
  color: var(--user-input);
}

.gradient:nth-child(1) {
  --top: 0;
  --right: 0;
  --size: 70vw;
  --blur: calc(0.5 * var(--size));
  --opacity: 0.3;
  animation: zoom_gradient 6s infinite;
}
/* ... */

